--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 	color: white;
 	text-transform: uppercase;
 	font-family: 'Oswald';
+	letter-spacing: 5px;
 }
 
 .banner h1 {
@@ -80,16 +81,21 @@ body {
 }
 
 .nav a{
-	padding-left: 30px;
-	padding-right: 25px;
+	margin-left: 30px;
+	margin-right: 25px;
 	padding-top: 16px;
 	text-decoration: none;
 	color: white;
-	font-family: 'Quattrocento Sans'
+	font-family: 'Quattrocento Sans';
 }
+
 
 .nav a:hover {
 	color: rgba(255,255,255,0.5);
+}
+
+.current-nav {
+	border-bottom: 5px solid #159487;
 }
 
 /* Body Content */
@@ -125,14 +131,16 @@ body {
 	text-align: center;
 	margin: 0 auto;
 	padding-top: 15px;
+	color: #5b5b5b;
 }
 
 .section-container {
-	height: 370px;
+	/*height: 370px;*/
 	padding-top: 40px;
 	/*border: 1px solid black;*/
 	display: flex;
 	justify-content: center;
+	padding-bottom: 50px;
 }
 
 .section {
@@ -140,11 +148,10 @@ body {
 	/*border: 1px solid black;*/
 }
 
-.image {
+.icon {
 	margin: 0 auto;
-	height: 40px;
-	width: 40px;
-	border: 1px solid black;
+	height: 50px;
+	width: 50px;
 }
 
 .section h2 {
@@ -162,6 +169,7 @@ body {
 	width: 60%;
 	text-align: center;
 	padding-top: 15px;
+	color: #5b5b5b;
 }
 
 /* Projects Section */
@@ -182,9 +190,8 @@ body {
 }
 
 .project-section {
-	height: 400px;
+	/*height: 400px;*/
 	padding-top: 70px;
-	/*border: 1px solid black;*/
 }
 
 .project-words {
@@ -192,7 +199,7 @@ body {
 	width: 30%;
 	float: left;
 	margin-left: 12%;
-	/*border: 1px solid black;*/
+	padding-bottom: 80px;
 }
 
 .project-words-second {
@@ -200,6 +207,7 @@ body {
 	width: 30%;
 	float: right;
 	margin-right: 12%;
+	padding-bottom: 80px;
 }
 
 .horizontal-line {
@@ -223,6 +231,7 @@ body {
 	text-align: center;
 	margin: 0 auto;
 	font-size: 20px;
+	color: #5b5b5b;
 }
 
 .project-button {
@@ -239,7 +248,7 @@ body {
 }
 
 .project-button:hover {
-	background-color: rgba(250, 250, 250,0.8);
+	background-color: #e1e1e1;
 }
 
 .project-photo {
@@ -247,8 +256,13 @@ body {
 	width: 30%;
 	float: right;
 	height: 300px;
-	margin-right: 12%;
-	border: 1px solid black;
+	margin-right: 16%;
+	/*border: 1px solid black;*/
+	padding-bottom: 80px;
+}
+
+.project-photo img, .project-photo-second img {
+	height: 300px;
 }
 
 .project-photo-second {
@@ -256,11 +270,13 @@ body {
 	width: 30%;
 	float: left;
 	height: 300px;
-	margin-left: 12%;
-	border: 1px solid black;
+	margin-left: 8%;
+	/*border: 1px solid black;*/
 }
 
 .projects hr {
+	position: relative;
+	z-index: 3;
 	width: 80%;
 	margin: 0 auto;
 	margin-top: 45px;
@@ -292,7 +308,7 @@ body {
 }
 
 .github-button:hover {
-	background-color: rgba(250, 250, 250,0.8);
+	background-color: #e1e1e1;
 }
 
 /* Resume Section*/
@@ -310,5 +326,198 @@ body {
 	text-align: center;
 	padding-top: 30px;
 }
+
+.resume p {
+	font-size: 20px;
+	width: 350px;
+	text-align: center;
+	margin: 0 auto;
+	padding-top: 30px;
+	color: #5f5f5f;
+}
+
+.resume-button {
+	width: 165px;
+	display: block;
+	padding: 10px;
+	border: 3px solid #159487;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 40px;
+	text-decoration: none;
+	color: black;
+	background-color: #FAFAFA;
+}
+
+.resume-button:hover {
+	background-color: #ebebeb;
+}
+
+/* Contact Section*/
+
+.contact {
+	/*height: 800px;*/
+	background-color: #E8E8E8;
+}
+
+.contact-header {
+	font-family: 'Oswald';
+	text-transform: uppercase;
+	font-size: 50px;
+	font-weight: normal;
+	text-align: center;
+	padding-top: 30px;
+}
+
+.contact-writeup{
+	font-size: 20px;
+	width: 350px;
+	text-align: center;
+	margin: 0 auto;
+	padding-top: 15px;
+	color: #5b5b5b;
+}
+
+.contact-inputs {
+	width: 350px;
+	height: 300px;
+	margin: 0 auto;
+	margin-top: 20px;
+	/*border: 1px solid black;*/
+	padding-bottom: 50px;
+	text-align: center;
+}
+
+.input-name, .input-email, .input-message{
+	height: 20px;
+	width: 300px;
+	margin-bottom: 10px;
+	padding: 15px;
+	padding-left: 10px;
+	padding-bottom: 16px;
+	border: 2px solid #159487;
+	font-size: 15px;
+}
+
+.input-name:focus, .input-email:focus, .input-message:focus {
+	border: 2px solid #5bb4ab;
+}
+
+.input-message {
+	height: 100px;
+	resize: none;
+	padding-top: 9px;
+}
+
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-size: 15px;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  font-size: 15px;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  font-size: 15px;
+}
+:-moz-placeholder { /* Firefox 18- */
+  font-size: 15px;
+}
+
+.asterisk-required {
+	font-size: 12px;
+	color: red;
+	text-align: left;
+	margin-left: 28px;
+	margin-top: -7px;
+
+}
+
+input[type="submit"] {
+	display: block;
+	background-color: #FAFAFA;
+	border: 2px solid #159487;
+	font-family: 'Quattrocento Sans';
+	margin: 5px auto;
+	font-size: 15px;
+	padding: 7px 20px;
+}
+
+input[type="submit"]:hover {
+	background-color: rgba(250, 250, 250,0.8);
+	cursor: pointer;
+}
+
+
+/* Music Section */
+
+.music {
+	/*height: 200px;*/
+	background-color: #68A19B;
+	padding-bottom: 40px;
+}
+
+.music-header {
+	font-family: 'Oswald';
+	text-transform: uppercase;
+	font-size: 50px;
+	font-weight: normal;
+	text-align: center;
+	padding-top: 30px;
+}
+
+.yes-button {
+	width: 80px;
+	display: block;
+	padding: 8px;
+	border: 2px solid #3e605d;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 40px;
+	text-decoration: none;
+	color: black;
+	background-color: #FAFAFA;
+}
+
+.yes-button:hover {
+	background-color: rgba(250, 250, 250,0.8);
+	cursor: pointer;
+}
+
+/* Footer */
+
+.footer {
+	background-color: #323232;
+	height: 250px;
+}
+
+.footer p {
+	color: white;
+	text-align: center;
+	margin: 0 auto;
+	font-size: 16px;
+	padding-top: 80px;
+}
+
+.footer-links {
+	height: 60px;
+	width: 170px;
+	display: flex;
+	margin: 0 auto;
+	justify-content: space-between;
+	padding-top: 40px;
+}
+
+.linkedin-link, .github-link {
+	display: inline-block;
+	border: 1px solid white;
+	border-radius: 4px;
+	height: 40px;
+	width: 40px;
+	margin: 0 auto;
+}
+
+
+
+
 
 
