--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ body {
 
 .current-nav {
 	border-bottom: 5px solid #159487;
+	transition: all ease-in-out 200ms;
 }
 
 /* Body Content */
@@ -339,8 +340,12 @@ body {
 
 .modal-content {
   background-color:#E8E8E8;
-  margin: 3% auto;
-  width: 90vmin;
+  /*margin: 3% auto;*/
+  /*width: 95vmin;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.17);
   animation-name:modalopen;
   animation-duration:1s;
@@ -357,6 +362,9 @@ body {
   padding-right: 10px;
   font-size:40px;
   color:#888;
+  height: 30px;
+  display: inline-block;
+
 }
 
 .close-button:hover,.close-button:focus{
@@ -485,20 +493,21 @@ body {
 }
 
 .input-name, .input-email, .input-message{
-	height: 20px;
 	width: 300px;
 	margin-bottom: 10px;
-	padding: 15px;
+	padding: 10px;
 	padding-left: 10px;
-	padding-bottom: 16px;
+	padding-bottom: 10px;
 	border: 2px solid #159487;
 	font-size: .75em;
+}
 
+input:invalid {
+    box-shadow: none;
 }
 
 .input-name:focus, .input-email:focus, .input-message:focus {
 	border: 2px solid #5bb4ab;
-	color: black;
 }
 
 .input-message {
@@ -507,26 +516,22 @@ body {
 	padding-top: 9px;
 }
 
-input::-webkit-contacts-auto-fill-button {
-  visibility: hidden;
-  display: none !important;
-  pointer-events: none;
-  position: absolute;
-  right: 0;
+
+/*::-webkit-input-placeholder {  Chrome/Opera/Safari 
+  font-size: 15px;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-moz-placeholder {  Firefox 19+ 
   font-size: 15px;
 }
-::-moz-placeholder { /* Firefox 19+ */
+
+:-ms-input-placeholder { IE 10+ 
   font-size: 15px;
 }
-:-ms-input-placeholder { /* IE 10+ */
+
+:-moz-placeholder {  Firefox 18- 
   font-size: 15px;
-}
-:-moz-placeholder { /* Firefox 18- */
-  font-size: 15px;
-}
+}*/
 
 .asterisk-required {
 	font-size: 0.6em;
@@ -552,8 +557,6 @@ input[type="submit"]:hover {
 	cursor: pointer;
 	transition: all ease-in-out 200ms;
 }
-
-
 
 /* Music Section */
 
