--- a/styles.css
+++ b/styles.css
@@ -683,6 +683,14 @@ input[type="submit"]:hover {
 	transition: all ease-in-out 200ms;
 }
 
+@media (max-width: 370px) {
+	.banner h1 {
+		font-size: 2.7em;
+		padding-top: 30vh;
+	}
+
+}
+
 @media (max-width: 500px) {
 	.nav {
 		display: none;
